pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec-469-emphasis_and_strong_emphasis.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 122
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/469-emphasis_and_strong_emphasis.md
---
foo bar *baz bim bam
